--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,1 @@
-<footer class="footer">
-  <div id="gotop">^</div>
-  <br>
-	@2015 Pithy Theme by Pawpaw.
-</footer>
+<footer><span>@2017 - Monochrome</span></footer>
