--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="header" class="parent justify-spaceBetween">
   <div class="inner w100 relative">
     <span class="f-left">  
-      <a href="{{ site.baseurl }}/">
+      <a href="https://thereviewindex.com">
         <h1>
-          <span>mono</span>chrome
+          <span>the</span>review<span>index</span>
         </h1>
       </a>
     </span>
